<resources>
    <string name="app_name">DashBoard</string>
    <string name="app_calculator">Calculadora</string>
    <string name="app_amigos">Amigos</string>
    <string name="app_edadCanina">Edad canina</string>
    <string name="app_quizzes">Quizzes</string>
    <string name="app_gallery">Galería</string>
    <string name="app_maps">Mapas</string>
    <string name="app_restaurants">Restaurantes</string>
    <string name="app_settings">Herramientas</string>
    <string name="app_hint">Introduce tu edad</string>
    <string name="app_btnCalculate">Calcular</string>
    <string name="app_questionEdad">¿Cuántos años tienes?</string>
    <string name="app_textResultEdad">Si fueras perro, tu edad sería %d años</string>
    <string name="app_toastEdad">Has introducido un campo vacío</string>
    <string name="app_initialText">Bienvenidos a mi APP calculadora</string>

    <string name="app_firstNumber">Introduzca el primer número:</string>
    <string name="app_secondNumber">Introduzca el segundo número:</string>
    <string name="app_hintFirstNumber">Número 1</string>
    <string name="app_hintSecondNumber">Número 2</string>
    <string name="app_add">Sumar</string>
    <string name="app_subtract">Restar</string>
    <string name="app_multiply">Mult</string>
    <string name="app_divide">Dividir</string>
    <string name="app_textResultCalculator">El resultado de la operación es:</string>

    <string name="app_toastCalculator">Tiene que insertar números</string>
    <string name="app_divideToast">No puedes dividir por 0</string>

    <string name="app_questionQuizzes">¿Qué valor de \"y\" es la solución a la ecuación?</string>
    <string name="app_send">Enviar</string>
    <string name="app_incorrectbutton">Volver a intentarlo</string>
    <string name="app_incorrectText">Incorrecto, vuelve a intentarlo</string>
    <string name="app_correct2button">Volver a empezar</string>
    <string name="app_correct2text">¡Correcto, ya has terminado!</string>
    <string name="app_correct1button">Continuar</string>
    <string name="app_correct1text">¡Correcto!</string>
    <string name="app_option">Debes seleccionar una opción</string>
    <string name="app_music">Música</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_mapas">Mapas_activity</string>
</resources>