<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_initialText"
        android:textSize="30dp"
        android:padding="14dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:src="@drawable/calculator" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_firstNumber"
        android:textSize="20dp"
        android:padding="14dp"/>
    <EditText
        android:id="@+id/firstNumber_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_hintFirstNumber"
        android:inputType="number"
        android:padding="14dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_secondNumber"
        android:textSize="20dp"
        android:padding="14dp"/>
    <EditText
        android:id="@+id/secondNumber_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_hintSecondNumber"
        android:inputType="number"
        android:padding="14dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add_btn"
            android:layout_width="91dp"
            android:layout_height="50dp"
            android:text="@string/app_add"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:layout_marginLeft="7dp"
            android:textSize="13dp"/>
        <Button
            android:id="@+id/substract_btn"
            android:layout_width="91dp"
            android:layout_height="50dp"
            android:text="@string/app_subtract"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:layout_marginLeft="7dp"
            android:textSize="13dp"/>
        <Button
            android:id="@+id/multiply_btn"
            android:layout_width="91dp"
            android:layout_height="50dp"
            android:text="@string/app_multiply"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:layout_marginLeft="7dp"
            android:textSize="13dp"/>
        <Button
            android:id="@+id/divide_btn"
            android:layout_width="91dp"
            android:layout_height="50dp"
            android:text="@string/app_divide"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:layout_marginLeft="7dp"
            android:textSize="13dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/app_textResultCalculator"
            android:textSize="15dp"
            android:paddingLeft="14dp"/>

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:textSize="15dp" />
    </LinearLayout>
</LinearLayout>